--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,10 @@ services:
       - saint_deps:/usr/local/lib/python3.10/site-packages
     working_dir: /app
     command: >
-      sh -c "pip install -r requirements.txt && 
+      sh -c "if [ ! -f /usr/local/lib/python3.10/site-packages/.installed ]; then 
+               pip install -r requirements.txt && 
+               touch /usr/local/lib/python3.10/site-packages/.installed; 
+             fi && 
              python -m uvicorn main:app --host 0.0.0.0 --port 8000"
 
   etcd:
