--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi
-uvicorn
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
 python-dotenv
 torch
 tqdm
@@ -7,14 +7,19 @@ scikit-learn
 pandas
 numpy
 pymilvus
-requests
+ujson
+requests>=2.25.1,<3.0.0
+urllib3>=1.26.0,<2.0.0
 
 # Added for database scripts
 pymongo==4.6.0
 python-dateutil==2.8.2
 
 # Added for auth and API (merged from backend/quiz_api/requirements.txt)
-pydantic
+pydantic==2.6.4
+pydantic-core==2.16.3
+starlette==0.36.3
+typing-extensions>=4.9.0
 python-multipart
 passlib[bcrypt]
 python-jose[cryptography]
