--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,18 @@ uvicorn[standard]==0.29.0
 python-dotenv
 torch
 tqdm
-scikit-learn
+scikit-learn==1.3.2
 pandas
-numpy
+numpy==1.26.4
 pymilvus
 ujson
 requests>=2.25.1,<3.0.0
 urllib3>=1.26.0,<2.0.0
+sentence-transformers==5.1.1
+scipy==1.11.4
+transformers==4.57.0
+huggingface-hub==0.35.3
+tokenizers==0.22.1
 
 # Added for database scripts
 pymongo==4.6.0
